# kpconvx

./: .gitignore  ACKNOWLEDGEMENTS  LICENSE  README.md  pyproject.toml
Pointcept-wrapper/: README.md
Pointcept-wrapper/configs/scannet/: semseg-kpconvx-base.py  semseg-kpnext-base.py
Pointcept-wrapper/models/kpconvx/: __init__.py  kpconvx_base.py
Pointcept-wrapper/models/kpconvx/utils/: cpp_funcs.py  (+8 more)
Pointcept-wrapper/models/kpnext/: __init__.py  generic_blocks.py  kernel_points.py  kpconv_blocks.py  kpnext_base.py  kpnext_blocks.py  ply.py  torch_pyramid.py
Standalone/: README.md  test_S3DIS.sh  test_ScanObjectNN.sh  train_S3DIS.sh  train_ScanObjectNN.sh
Standalone/KPConvX/: ply.py
Standalone/KPConvX/cpp_wrappers/: MANIFEST.in  pyproject.toml  setup.py
Standalone/KPConvX/cpp_wrappers/cpp_neighbors/: setup.py
Standalone/KPConvX/data_handlers/: object_classification.py  scene_seg.py
Standalone/KPConvX/kernels/: kernel_points.py
Standalone/KPConvX/models/: InvolutionNet.py  KPConvNet.py  KPInvNet.py  KPNext.py  generic_blocks.py  kpconv_blocks.py  kpinv_blocks.py  kpnext_blocks.py  kptran_blocks.py  pi_blocks.py
Standalone/KPConvX/tasks/: segmentation.py  test.py  training.py  trainval.py  validation.py
Standalone/KPConvX/utils/: batch_conversion.py  config.py  cpp_funcs.py  cuda_funcs.py  gpu_init.py  gpu_neigbors.py  gpu_subsampling.py  mayavi_visu.py  metrics.py  plot_utilities.py  printing.py  rotation.py  rsmix_provider.py  torch_pyramid.py  transform.py
kpconvx/: kernel.py  kpconv.py  main.py  model.py  old.py  subsampling.py  training.py
(+10 files in other folders)
