[project]
name = "kpconvx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dexc>=0.1.0",
    "easydict>=1.13",
    "kpconvx-cpp",
    "matplotlib>=3.10.1",
    "numpy~=1.26.4",
    "pykeops>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
kpconvx-cpp = { path = "Standalone/KPConvX/cpp_wrappers" }
